--- a/widget.ui
+++ b/widget.ui
@@ -346,7 +346,7 @@
   <widget class="QPushButton" name="savePicButton">
    <property name="geometry">
     <rect>
-     <x>880</x>
+     <x>860</x>
      <y>252</y>
      <width>111</width>
      <height>31</height>
@@ -359,7 +359,7 @@
   <widget class="QPushButton" name="saveFileButton">
    <property name="geometry">
     <rect>
-     <x>880</x>
+     <x>860</x>
      <y>280</y>
      <width>111</width>
      <height>31</height>
@@ -427,9 +427,9 @@
   <widget class="QLabel" name="MLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>166</y>
-     <width>199</width>
+     <width>221</width>
      <height>40</height>
     </rect>
    </property>
@@ -440,9 +440,9 @@
   <widget class="QLabel" name="vLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>73</y>
-     <width>199</width>
+     <width>221</width>
      <height>41</height>
     </rect>
    </property>
@@ -453,9 +453,9 @@
   <widget class="QLabel" name="XPosLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>27</y>
-     <width>199</width>
+     <width>221</width>
      <height>40</height>
     </rect>
    </property>
@@ -466,9 +466,9 @@
   <widget class="QLabel" name="FsyLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>120</y>
-     <width>199</width>
+     <width>221</width>
      <height>40</height>
     </rect>
    </property>
@@ -479,9 +479,9 @@
   <widget class="QLabel" name="maxFsyPos">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>461</y>
-     <width>199</width>
+     <width>221</width>
      <height>35</height>
     </rect>
    </property>
@@ -492,9 +492,9 @@
   <widget class="QLabel" name="MzMaxLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>339</y>
-     <width>199</width>
+     <width>221</width>
      <height>35</height>
     </rect>
    </property>
@@ -505,9 +505,9 @@
   <widget class="QLabel" name="maxBendingPos">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>543</y>
-     <width>199</width>
+     <width>221</width>
      <height>35</height>
     </rect>
    </property>
@@ -518,9 +518,9 @@
   <widget class="QLabel" name="FsyMaxLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>421</y>
-     <width>199</width>
+     <width>221</width>
      <height>34</height>
     </rect>
    </property>
@@ -531,9 +531,9 @@
   <widget class="QLabel" name="bendingMaxLabel">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>502</y>
-     <width>199</width>
+     <width>221</width>
      <height>35</height>
     </rect>
    </property>
@@ -544,9 +544,9 @@
   <widget class="QLabel" name="maxMzPos">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>810</x>
      <y>380</y>
-     <width>199</width>
+     <width>221</width>
      <height>35</height>
     </rect>
    </property>
@@ -572,12 +572,12 @@
     <rect>
      <x>10</x>
      <y>560</y>
-     <width>171</width>
+     <width>191</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>计算</string>
+    <string>计算并更新图形</string>
    </property>
   </widget>
   <widget class="QPushButton" name="resClrButton">
@@ -591,6 +591,25 @@
    </property>
    <property name="text">
     <string>约束清零</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>210</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>提示：在图像中点击并移动鼠标可以获取以上信息</string>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
