--- a/widget.ui
+++ b/widget.ui
@@ -17,6 +17,9 @@
    <iconset>
     <normaloff>:/bridge1.ico</normaloff>:/bridge1.ico</iconset>
   </property>
+  <property name="windowOpacity">
+   <double>1.000000000000000</double>
+  </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
@@ -24,7 +27,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>50</y>
+     <y>330</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -37,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>10</y>
+     <y>290</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -50,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>50</y>
+     <y>330</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -69,7 +72,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>290</y>
      <width>91</width>
      <height>21</height>
     </rect>
@@ -88,7 +91,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>190</y>
+     <y>470</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -101,7 +104,7 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>160</y>
+     <y>440</y>
      <width>111</width>
      <height>21</height>
     </rect>
@@ -130,8 +133,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>290</y>
+     <x>9</x>
+     <y>10</y>
      <width>54</width>
      <height>21</height>
     </rect>
@@ -143,8 +146,8 @@
   <widget class="QLineEdit" name="lengthText">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>290</y>
+     <x>99</x>
+     <y>10</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -156,8 +159,8 @@
   <widget class="QLineEdit" name="ElaText">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>330</y>
+     <x>99</x>
+     <y>50</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -169,8 +172,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>330</y>
+     <x>9</x>
+     <y>50</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -182,8 +185,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>370</y>
+     <x>9</x>
+     <y>90</y>
      <width>54</width>
      <height>21</height>
     </rect>
@@ -195,8 +198,8 @@
   <widget class="QLineEdit" name="IzText">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>370</y>
+     <x>99</x>
+     <y>90</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -209,7 +212,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
+     <y>370</y>
      <width>91</width>
      <height>21</height>
     </rect>
@@ -231,7 +234,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>90</y>
+     <y>370</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -244,7 +247,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>130</y>
+     <y>410</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -266,7 +269,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>130</y>
+     <y>410</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -279,7 +282,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>190</y>
+     <y>470</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -291,21 +294,21 @@
   <widget class="QLabel" name="rResLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>440</y>
+     <x>9</x>
+     <y>160</y>
      <width>81</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>约束/m</string>
+    <string>约束位置/m</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="rResText">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>440</y>
+     <x>99</x>
+     <y>160</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -317,9 +320,9 @@
   <widget class="QLabel" name="scaleLabel">
    <property name="geometry">
     <rect>
-     <x>3</x>
-     <y>510</y>
-     <width>231</width>
+     <x>2</x>
+     <y>230</y>
+     <width>241</width>
      <height>20</height>
     </rect>
    </property>
@@ -330,8 +333,8 @@
   <widget class="QRadioButton" name="scaleOpt">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>540</y>
+     <x>60</x>
+     <y>250</y>
      <width>89</width>
      <height>16</height>
     </rect>
@@ -412,7 +415,7 @@
    <property name="geometry">
     <rect>
      <x>13</x>
-     <y>230</y>
+     <y>510</y>
      <width>181</width>
      <height>41</height>
     </rect>
@@ -557,8 +560,8 @@
   <widget class="QPushButton" name="addResButton">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>470</y>
+     <x>-1</x>
+     <y>190</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -583,8 +586,8 @@
   <widget class="QPushButton" name="resClrButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>470</y>
+     <x>99</x>
+     <y>190</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -605,11 +608,37 @@
    <property name="text">
     <string>提示：在图像中点击并移动鼠标可以获取以上信息</string>
    </property>
+   <property name="textFormat">
+    <enum>Qt::PlainText</enum>
+   </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QCommandLinkButton" name="sectionButton">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>110</y>
+     <width>191</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>打开截面几何计算器</string>
+   </property>
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/1074273.png</normaloff>:/1074273.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>28</width>
+     <height>28</height>
+    </size>
    </property>
   </widget>
  </widget>
@@ -626,6 +655,8 @@
   <tabstop>ElaText</tabstop>
   <tabstop>IzText</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
